package study.mediator2;

public class TitleUI {

  void setTitle(VideoInfo videoInfo) {
    System.out.println("제목 표시줄의 제목을 변경합니다: " + videoInfo.getTitle());
  }
}
